dev_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aimmo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: dev-aimmo-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host:
      http:
        paths:
            - backend:
                serviceName: default-http-backend
                servicePort: 80
