ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aimmo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: local.aimmo.codeforlife.education
      http:
        paths:
            - backend:
                serviceName: default-http-backend
                servicePort: 80
